# zh-en-translation

./: .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  CORPUS_COLLECTION.md  DOMAIN_IMPROVEMENTS.md  FINAL_SESSION_HANDOFF.md  FINETUNING_PLAN.md  FINETUNING_SETUP.md  GPU_TRAINING_IMPLEMENTATION.md  LINUX_FLATPAK_PLAN.md  NEXT_SESSION_PROMPT.md  PLAN.md  PREP-PRIORITY-1.md  PRODUCTION_READY.md  QA-Assessment-1.md  Qa-assesment 1.md  README.md  SESSION_HANDOFF.md  TEST_PLAN.md  ab_multi_domain_results.md  ab_test_results.md  conftest.py  gemini_review.md  linux-progress.md  next_prompt.md  plan-v2.md  plan-v3.md  plan_v1-v2_status.md  progress.md  pyproject.toml  signing_plan.md  v4_completeness.md
.githooks/: pre-commit
.github/workflows/: build-macos.yml
flatpak/: io.github.zh_en_translator.desktop  io.github.zh_en_translator.metainfo.xml  io.github.zh_en_translator.yml
flatpak/scripts/: generate-sources.sh
installer/: after_install.txt  build.ps1  build_linux.sh  download_packs.ps1  install_tesseract.ps1  setup_elevated.ps1  setup_ocr_elevated.ps1  zh-en-translator-linux.spec  zh-en-translator-lite.iss  zh-en-translator-macos.spec  zh-en-translator.iss  zh-en-translator.spec
installer/runtime_hooks/: macos_paths.py  set_qt_path.py
scripts/: analyze_translation.py  generate_translation_alternatives.py  install-windows.ps1  run_ab_tests.py
src/zh_en_translator/: __init__.py  __main__.py  app.py  capture.py  config.py  hotkey.py  install_state.py
src/zh_en_translator/corpus/: __init__.py  corpus_manager.py
src/zh_en_translator/corpus/examples/: manufacturing_samples.jsonl
src/zh_en_translator/engines/: __init__.py  argos.py  back_translation.py  converter.py  deepl.py  dictionary.py  glossary.py  glossary_db.py  google_translate.py  history.py  libretranslate.py  ms_cloud.py  pipeline.py  segmentation.py  themes.py  translation_worker.py  updater.py  updates.py  validation.py
src/zh_en_translator/engines/ocr/: engine.py  paddle_ocr.py  tesseract_ocr.py  windows_ocr.py
src/zh_en_translator/evaluation/: __init__.py  a_b_tester.py  metrics.py
src/zh_en_translator/finetuning/: __init__.py  config.py  data_preparation.py  evaluation.py  trainer.py
src/zh_en_translator/resources/: cedict_sample.txt  glossary_electronics.toml  glossary_legal.toml  glossary_manufacturing.toml  glossary_medical.toml  user_dict_technical.toml  user_dict_technical.txt
src/zh_en_translator/ui/: __init__.py  domain_selector.py  feedback_dialog.py  popup.py  preferences.py  sidebar.py  update_dialog.py  update_options_dialog.py
tests/: __init__.py  test_ab_multi_domain.py  test_ab_translation.py  test_accessibility.py  test_adaptive_orchestration.py  test_app_smoke.py  test_back_translation.py  test_bootstrap.py  test_capture.py  test_clause_translation.py  test_config.py  test_converter.py  test_corpus_and_ab.py  test_dictionary.py  test_finetuning_prep.py  test_glossary.py  test_glossary_db.py  test_history.py  test_hotkey.py  test_install_state_overlay.py  test_logging.py  test_macos_accessibility.py  test_ms_cloud.py  test_multi_domain.py  test_ocr.py  test_pinyin.py  test_pipeline.py  test_preferences_regression.py  test_segmentation.py  test_segmentation_benchmarks.py  test_startup_macos.py  test_themes.py  test_updater.py  test_updater_integration.py  test_updates_core_asset.py  test_user_dict.py  test_validation.py
