[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zh-en-translator"
dynamic = ["version"]
description = "Offline-first Chinese->English popup translator"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Roger Neumann" }]
dependencies = [
    "PyQt6>=6.0.0",
    "pynput>=1.7.6",
    "platformdirs>=4.0.0",
    "argostranslate>=1.9.0,<1.10.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-qt>=4.0.0", "ruff>=0.2.0"]
ocr-windows = [
    "winrt-runtime",
    "winrt-Windows.Media.Ocr",
    "winrt-Windows.Graphics.Imaging",
    "winrt-Windows.Storage.Streams",
    "winrt-Windows.Globalization",
]
ocr-windows-legacy = ["winsdk"]
ocr-tesseract = ["pytesseract", "Pillow"]
ocr-paddle = ["paddleocr", "Pillow"]
traditional = ["opencc-python-reimplemented>=1.1.0"]
linux = [
    "pytesseract",
    "Pillow",
    "opencc-python-reimplemented>=1.1.0",
]
pkuseg = ["spacy-pkuseg>=1.0.0"]
finetuning = [
    "opennmt-py>=3.0",
    "ctranslate2>=3.0",
    "sentencepiece>=0.1.99",
    "torch>=2.0",
]

[project.scripts]
zh-en-translator = "zh_en_translator.app:main"

[tool.setuptools.dynamic]
version = {attr = "zh_en_translator.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zh_en_translator.resources" = ["*.svg", "*.png", "*.txt", "*.toml", "*.db"]
"zh_en_translator.corpus" = ["*.jsonl", "examples/*.jsonl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
# CSS strings inside f-strings cannot be line-wrapped without corrupting the stylesheet
"src/zh_en_translator/ui/*.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "--tb=short"
